// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Composer > Snapshots > matches snapshot in idle state 1`] = `
"
                                                                                       ShortcutsHint
────────────────────────────────────────────────────────────────────────────────────────────────────
 ApprovalModeIndicator                                                                 StatusDisplay
InputPrompt:   Type your message or @path/to/file
Footer"
`;

exports[`Composer > Snapshots > matches snapshot in minimal UI mode 1`] = `
"
                                                                                       ShortcutsHint
InputPrompt:   Type your message or @path/to/file"
`;

exports[`Composer > Snapshots > matches snapshot in minimal UI mode while loading 1`] = `
"
 LoadingIndicator
InputPrompt:   Type your message or @path/to/file"
`;

exports[`Composer > Snapshots > matches snapshot in narrow view 1`] = `
"

ShortcutsHint
────────────────────────────────────────
 ApprovalModeIndicator

StatusDisplay
InputPrompt:   Type your message or
@path/to/file
Footer"
`;

exports[`Composer > Snapshots > matches snapshot while streaming 1`] = `
"
 LoadingIndicator: Thinking                                                            ShortcutsHint
────────────────────────────────────────────────────────────────────────────────────────────────────
 ApprovalModeIndicator
InputPrompt:   Type your message or @path/to/file
Footer"
`;
